@@ -1,3 +1,7 @@
+2023-12-29 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+    * Allow reading of null values in array-type data, resolves #309
+
 2023-12-27 Francois Suter (Idéative)  <typo3@ideative.ch>
 
     * Improve look of backend modules in TYPO3 12
